creacion de HEADER

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 </head>
 <body>
 
-    <header>
 
 
-    <div class="container mt-5">
+    <header class="text-center cabecera mt-3">
+        <div class="container">
+            <h1 class="bienvenida">Bienvenidos al torneo Spelldust <p class="inscribete">¡inscríbete!</p></h1>
+        </div>
+    </header>
+
+
+
+
+    <div class="container">
 
 
         <div class="row justify-content-center align-items-center">
@@ -43,16 +51,15 @@
                     </div>
 
                     <div class="col-12 mt-5 mb-5">
-                        <button type="submit" class="button" id="grabar">Agregar datos</button>
+                        <button type="submit" class="button" id="grabar">Agregar Jugador</button>
                     </div>
 
 
                 </div>
             </form>
         </div>
-    </header>
 
-    
+
 
         <div class="row justify-content-center align-items-center">
             <div class="col-12">
